infra/authelia/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "auth.issamhomelab.org"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik
      sectionName: https

  hostnames:
    - "auth.issamhomelab.org"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          namespace: authelia
          port: 80
